--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
         <activity android:name=".ui.movies.MoviesActivity" android:exported="true">
 
         </activity>
+        <activity android:name=".ui.details.MovieDetailsActivity" android:exported="true">
+
+        </activity>
 
         <meta-data
             android:name="preloaded_fonts"
